3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/map.c: Add extra check to make sure variable is set before calling
   strcmp - this can happen if the map file that is being loaded is
   0 bytes - without this, the server would crash.
MSW 2004-08-23


server/disease.c: fix crash when casting diseases on tiled maps.
server/move.c: fix problem with multi-tile monsters and pass thru walls.
server/spell_effect.c: fix magic walls sometimes appearing in wrong place.
Andreas Kirschbaum 2004-08-20

common/loader.l, loader.c: in check_loaded_object() - don't give spell
   objects inventory if we are in the arch_init phase.  When loading objects
   in common loader routine, if object doesn't have arch, set the object
   name to the arch name so that it is more meaningful than 'singularity'.
common/map.c: If object has inventory, check to make sure the inventory
   objects have an archetype set - if not, remove and free the object -
   objects without archetypes causes crashes. 
MSW 2004-08-17

server/apply.c: fix_auto_apply() - add some debugging statements, as I've
   seen crashes caused by monsters with scrolls with no spells - need to
   figure out how those are showing up.
server/c_wiz.c: command_kick() - fix occasional crashes when player isn't
  on any map when kicked.  command_create() largely rewritten so it doesn't
  crash the server on any malformed values passed in, add some more features
  so it should be easier to create objects.
MSW 2004-08-16

server/apply.c: better to not create a treasure for spellbooks that already have
    something in inventory. Else you get 2 spells in the book, which then